--- a/MCPClient/MCPClient.csproj
+++ b/MCPClient/MCPClient.csproj
@@ -19,12 +19,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.4" />
     <PackageReference Include="Microsoft.SemanticKernel" Version="1.46.0" />
     <PackageReference Include="Microsoft.SemanticKernel.Abstractions" Version="1.46.0" />
     <PackageReference Include="Microsoft.SemanticKernel.Core" Version="1.46.0" />
-    <PackageReference Include="ModelContextProtocol" Version="0.1.0-preview.8" />
+    <PackageReference Include="ModelContextProtocol" Version="0.1.0-preview.9" />
   </ItemGroup>
 
 </Project>
